# elt_llm_rag

./: .env  .gitignore  AGENT_READY_FOR_TESTING.md  AGENT_VS_CONSUMER.md  ANSWER.md  ARCHITECTURE.md  COMPLETE_DATA_FLOW.md  ORCHESTRATION.md  PORTABILITY.md  PROJECT_REVIEW.md  QUALITY_GATE_BM25.md  QUALITY_GATE_IMPLEMENTATION.md  QUALITY_GATE_STATUS.md  RAG_PIPELINE_DEEP_DIVE.md  RAG_STRATEGY.md  RAG_TUNING.md  README.md  REQUIREMENTS_STATUS.md  REVIEW_POST_REFACTOR.md  ROADMAP.md  SOLUTION_OVERVIEW.md  TEAMS_CHAT_RESPONSE.md  TESTING_AGENT_VS_CONSUMER.md  TODO.md  can_we_answer_the_ask.md  problem.md  pyproject.toml  test_agent_quick.py  test_performance_comparison.py  test_quality_gate.py
elt_llm_agent/: AGENTIC_INGESTION_POSSIBILITIES.md  AGENTIC_RAG_FOR_CATALOGS.md  AGENT_VS_CONSUMER.md  ARCHITECTURE.md  INDUSTRY_BEST_PRACTICES.md  OPEN_SOURCE_GRAPH_OPTIONS.md  QUALITY_GATE.md  README.md  pyproject.toml  t2.html  test_agent_rag_only.py
elt_llm_agent/src/elt_llm_agent/: __init__.py  agent.py  agent_consolidated_catalog.py  chat.py  compare_catalogs.py  quality_gate.py  query.py  runner.py  test_agent_vs_consumer.py  test_consumer_vs_agent.py
elt_llm_agent/src/elt_llm_agent/memory/: __init__.py
elt_llm_agent/src/elt_llm_agent/planners/: __init__.py
elt_llm_agent/src/elt_llm_agent/tools/: __init__.py  graph_traversal.py  json_lookup.py  rag_query.py
elt_llm_agentic/: README.md  TODO.md  pyproject.toml
elt_llm_agentic/src/elt_llm_agentic/: __init__.py  chat.py  fa_agentic_catalog.py  graph_traversal.py  memory.py  quality_gate.py  retriever.py
elt_llm_api/: ARCHITECTURE.md  README.md  pyproject.toml
elt_llm_api/src/elt_llm_api/: __init__.py  api.py  app.py
elt_llm_api/tests/: test_dama_api.py
elt_llm_consumer/: ARCHITECTURE.md  README.md  TODO.md  WHAT_YOU_HAVE.md  pyproject.toml  stuff.md
elt_llm_consumer/config/: entity_aliases.yaml  fa_consolidated_catalog.yaml  fa_coverage_validator.yaml  fa_handbook_model_builder.yaml
elt_llm_consumer/config/prompts/: domain_inference.yaml  entity_relationship.yaml  governance_extraction.yaml  handbook_context.yaml  handbook_definition.yaml  handbook_governance.yaml  handbook_model_builder.yaml
elt_llm_consumer/src/elt_llm_consumer/: __init__.py  business_glossary.py  fa_ai_glossary.py  fa_consolidated_catalog.py  fa_consolidated_catalog_v2.py  fa_coverage_validator.py  fa_glossary_generator_claude.py  fa_handbook_leanix_glossary.py  fa_handbook_model_builder.py  fa_integrated_catalog.py  fa_leanix_model_validate.py
elt_llm_consumer/src/elt_llm_consumer/rag_retriever/: __init__.py  _config.py  retriever.py
elt_llm_consumer/src/elt_llm_consumer/rag_retriever/ranking/: __init__.py  bm25.py  boosted.py  embedding.py
elt_llm_core/: ARCHITECTURE.md  README.md  pyproject.toml
elt_llm_core/src/elt_llm_core/: __init__.py  config.py  models.py  query_engine.py  vector_store.py
elt_llm_ingest/: ARCHITECTURE.md  COLLECTION_FIXES.md  DOCLING_USAGE.md  FIXES_APPLIED.md  LEANIX_OUTPUT_REVIEW.md  PREPROCESSOR_INTEGRATION.md  README.md  RUNNERS.md  TODO.md  leanix_output_sample.md  pyproject.toml  test_leanix_preprocessor.py
elt_llm_ingest/_leanix_sections/DAT_V00_sections/: additional_entities.md  agreements.md  campaign.md  location.md  overview.md  product.md  reference_data.md  relationships.md  static_data.md  time_bounded_groupings.md  transaction_and_events.md
elt_llm_ingest/config/: dama_dmbok.yaml  fa_data_architecture.yaml  fa_handbook.yaml  ingest_fa_data_architecture.yaml  ingest_fa_ea_leanix.yaml  ingest_fa_ea_sad.yaml  ingest_fa_handbook.yaml  ingest_fa_handbook_pdf.yaml  ingest_fa_leanix_dat_enterprise_conceptual_model.yaml  ingest_fa_leanix_global_inventory.yaml  ingest_fa_leanix_inventory.yaml  leanix.yaml  load_rag.yaml  rag_config.yaml  sad.yaml  supplier_assess.yaml
elt_llm_ingest/src/elt_llm_ingest/: __init__.py  batch_loader.py  chunking.py  clean_slate.py  cli.py  compare_parsers.py  doc_leanix_parser.py  doc_leanix_parser_qwen.py  docling_preprocessor.py  file_hash.py  ingest.py  preprocessor.py  runner.py  test_chunking.py
elt_llm_ingest/tests/: __init__.py  test_chunking.py  test_docling_ingest.py
elt_llm_query/: ARCHITECTURE.md  QUERY.md  README.md  out.txt  pyproject.toml
elt_llm_query/examples/: all_collections.yaml  architecture_focus.yaml  dama_fa_combined.yaml  dama_fa_full.yaml  dama_only.yaml  fa_data_management.yaml  fa_handbook_only.yaml  leanix_fa_combined.yaml  leanix_only.yaml  vendor_assessment.yaml
elt_llm_query/llm_rag_profile/: all_collections.yaml  architecture_focus.yaml  dama_fa_data_arch.yaml  dama_fa_full.yaml  dama_fa_handbook.yaml  dama_only.yaml  fa_data_management.yaml  fa_enterprise_architecture.yaml  fa_handbook_only.yaml  leanix_fa_combined.yaml  leanix_only.yaml  leanix_relationships.yaml  vendor_assessment.yaml
elt_llm_query/src/elt_llm_query/: __init__.py  cli.py  query.py  runner.py
elt_llm_query/tests/: __init__.py
scripts/: export_leanix_glossary_csv.py  generate_business_glossary.py
