[project]
name = "elt-llm-rag"
version = "0.1.0"
description = "LLM RAG workspace for document ingestion and querying"
requires-python = ">=3.11, <3.14"
readme = "README.md"

[tool.uv.workspace]
members = [
    "elt_llm_core",
    "elt_llm_ingest",
    "elt_llm_query",
]

[tool.uv.sources]
elt-llm-core = { workspace = true }
elt-llm-ingest = { workspace = true }
elt-llm-query = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]
