[project]
name = "elt-llm-agent"
version = "0.1.0"
description = "Agentic RAG orchestration layer — multi-step reasoning with tool use"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "elt-llm-core>=0.1.0",
    "elt-llm-query>=0.1.0",
    "elt-llm-consumer>=0.1.0",
    "llama-index>=0.12.0",
    "llama-index-agent-openai>=0.3.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
]

[project.scripts]
elt-llm-agent-chat = "elt_llm_agent.chat:main"
elt-llm-agent-query = "elt_llm_agent.runner:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
elt-llm-core = { workspace = true }
elt-llm-query = { workspace = true }
elt-llm-consumer = { workspace = true }
