[project]
name = "elt-llm-agentic"
version = "0.1.0"
description = "Agentic RAG retrieval — LLM-driven iterative retrieval for comparison against elt_llm_consumer naive pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "elt-llm-core>=0.1.0",
    "elt-llm-query>=0.1.0",
    "elt-llm-consumer>=0.1.0",
    "networkx>=3.0",
]

[project.scripts]
elt-llm-agentic-catalog = "elt_llm_agentic.fa_agentic_catalog:main"
elt-llm-agentic-chat = "elt_llm_agentic.chat:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
elt-llm-core = { workspace = true }
elt-llm-query = { workspace = true }
elt-llm-consumer = { workspace = true }
