[project]
name = "elt-llm-api"
version = "0.1.0"
description = "Programmatic API for querying RAG indices"
readme = "../README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "elt-llm-core>=0.1.0",
    "elt-llm-query>=0.1.0",
    "elt-llm-ingest>=0.1.0",
    "gradio>=4.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
elt-llm-core = { workspace = true }
elt-llm-query = { workspace = true }
elt-llm-ingest = { workspace = true }
