[project]
name = "elt-llm-consumer"
version = "0.1.0"
description = "Purpose-built products that consume the LLM+RAG infrastructure"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "elt-llm-core>=0.1.0",
    "elt-llm-ingest>=0.1.0",
    "elt-llm-query>=0.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
elt-llm-consumer-glossary = "elt_llm_consumer.business_glossary:main"
elt-llm-consumer-handbook-model = "elt_llm_consumer.fa_handbook_model_builder:main"
elt-llm-consumer-handbook-glossary = "elt_llm_consumer.fa_handbook_leanix_glossary:main"
elt-llm-consumer-integrated-catalog = "elt_llm_consumer.fa_integrated_catalog:main"
elt-llm-consumer-coverage-validator = "elt_llm_consumer.fa_coverage_validator:main"
elt-llm-consumer-consolidated-catalog = "elt_llm_consumer.fa_consolidated_catalog:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
elt-llm-core = { workspace = true }
elt-llm-ingest = { workspace = true }
elt-llm-query = { workspace = true }
